# DataFlow

./: .gitignore
api_fastapi/: .coverage  .env  Dockerfile  README.md  pyproject.toml
api_fastapi/app/: main.py
api_fastapi/app/core/: config.py  database.py  dependencies.py  security.py
api_fastapi/app/features/auth/: dependencies.py
api_fastapi/app/features/auth/api/controller/: __init__.py  auth_permissions_controller.py  auth_roles_controller.py  auth_users_controller.py
api_fastapi/app/features/auth/api/dependencies/: auth_dependencies.py  authorization_dependencies.py  permission_dependencies.py  roles_dependencies.py
api_fastapi/app/features/auth/api/schemas/: auth_permission_schema.py  auth_roles_schema.py  auth_schema.py
api_fastapi/app/features/auth/application/service/: auth_permission_service.py  auth_roles_service.py  (+1 more)
api_fastapi/app/features/auth/controller/: __init__.py  auth_controller.py  auth_permissions_controller.py  auth_roles_controller.py  auth_users_controller.py
api_fastapi/app/features/auth/dependencies/: auth_dependencies.py  permission_dependencies.py  roles_dependencies.py
api_fastapi/app/features/auth/entities/: permission_entity.py  roles_entity.py  user_entity.py
api_fastapi/app/features/auth/exceptions/: services_erros.py
api_fastapi/app/features/auth/models/: __init__.py  permission_model.py  role_model.py  user_model.py
api_fastapi/app/features/auth/repository/: permission_repository.py  roles_repository.py  user_repository.py
api_fastapi/app/features/auth/schemas/: auth_permission_schema.py  auth_roles_schema.py  auth_schema.py
api_fastapi/app/features/auth/security/: password_hasher.py
api_fastapi/app/features/auth/service/: auth_permission_service.py  auth_roles_service.py  auth_service.py
api_fastapi/migrations/: env.py
api_fastapi/migrations/versions/: dfee027cf857_create_users_table.py  f55089a4ff7d_create_roles_permissions_relationships.py
api_fastapi/scripts/: seed_admin.py
api_fastapi/tests/: conftest.py  test_health.py
api_fastapi/tests/features/unit/auth/: test_auth_controller.py  test_auth_schema.py  test_auth_service.py
(+38 files in other folders)
