[project]
name = "api-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-asyncio>=0.63b1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.4.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["."]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["app", "tests"]
extend-exclude = [
    "__pycache__",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # import sorting
    "B",     # bugbear
    "UP",    # pyupgrade
    "SIM",   # simplificações
    "C4",    # comprehensions
    "RUF",   # regras próprias do Ruff
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"app/features/*/controller/*.py" = ["B008"]
"app/main.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
